--- a/src/DirectoryMiner/DirectoryMiner.csproj
+++ b/src/DirectoryMiner/DirectoryMiner.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
@@ -28,6 +28,7 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.8" />
+		<PackageReference Include="TreeMiner" Version="0.1.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<EmbeddedResource Include="appsettings.json">
