--- a/src/DirectoryMiner/appsettings.json
+++ b/src/DirectoryMiner/appsettings.json
@@ -8,14 +8,14 @@
         "Name": "Console",
         "Args": {
           "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u4}] [{MachineName}] [{SourceContext}] {Message}{NewLine}{Exception}"
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u4}] [{MachineName}] [{SourceContext}] {Message}{NewLine}{Exception}"
         }
       },
       {
         "Name": "File",
         "Args": {
           "path": "logs/DirectoryMiner.log",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u4}] [{MachineName}] [{SourceContext}] {Message}{NewLine}{Exception}",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level:u4}] [{MachineName}] [{SourceContext}] {Message}{NewLine}{Exception}",
           "rollOnFileSizeLimit": true,
           "fileSizeLimitBytes": 8388608,
           "retainedFileCountLimit": 8,
