--- a/src/DirectoryMiner/Properties/launchSettings.json
+++ b/src/DirectoryMiner/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Run": {
       "commandName": "Project",
-      "commandLineArgs": "--path \"D:\\My Folders\""
+      "commandLineArgs": "--path \"C:\\Temp\""
     },
     "Help": {
       "commandName": "Project",
